main-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-application-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-application
  template:
    metadata:
      labels:
        app: main-application
    spec:
      volumes:
        - name: shared-timestamp
          emptyDir: {}
        - name: shared-pingpong
          persistentVolumeClaim:
            claimName: pingpong-claim
      containers:
        - name: app-response
          image: tapanih/dwk-app-response:0.6
          volumeMounts:
          - name: shared-timestamp
            mountPath: /usr/local/bin/files
          - name: shared-pingpong
            mountPath: /usr/local/bin/pongs
        - name: timestamper
          image: tapanih/dwk-timestamper:0.1
          volumeMounts:
          - name: shared-timestamp
            mountPath: /usr/local/bin/files
