main-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-application-svc
  namespace: alpha
spec:
  type: ClusterIP
  selector:
    app: main-application
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
