main-application/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-application-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app-svc
          servicePort: 2346
      - path: /todos
        backend:
          serviceName: todo-service-svc
          servicePort: 2348
      - path: /main
        backend:
          serviceName: main-application-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2347
      - path: /pongs
        backend:
          serviceName: pingpong-svc
          servicePort: 2347
